--- a/src/main/java/com/mycompany/gestionsejour/gui/MainGUI.form
+++ b/src/main/java/com/mycompany/gestionsejour/gui/MainGUI.form
@@ -14,10 +14,9 @@
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
-
   <SubComponents>
 
-    <!-- ===== HEADER (NORTH) ===== -->
+    <!-- HEADER BLEU FONCE -->
     <Container class="javax.swing.JPanel" name="panelHeader">
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"
@@ -27,35 +26,33 @@
       </Constraints>
       <Properties>
         <Property name="background" type="java.awt.Color">
-          <Color red="30" green="64" blue="175" type="1"/>
+          <Color red="30" green="58" blue="138" type="1"/>
         </Property>
         <Property name="preferredSize" type="java.awt.Dimension">
-          <Dimension value="[0, 60]"/>
+          <Dimension value="[0, 50]"/>
         </Property>
       </Properties>
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
       <SubComponents>
         <Component class="javax.swing.JLabel" name="labelTitre">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="  Hotel Manager"/>
+            <Property name="font" type="java.awt.Font"><Font name="SansSerif" size="20" style="1"/></Property>
+            <Property name="foreground" type="java.awt.Color">
+              <Color red="255" green="255" blue="255" type="1"/>
+            </Property>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"
                         value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
               <BorderConstraints direction="Center"/>
             </Constraint>
           </Constraints>
-          <Properties>
-            <Property name="text" type="java.lang.String" value="  Hotel Manager"/>
-            <Property name="foreground" type="java.awt.Color">
-              <Color red="219" green="234" blue="254" type="1"/>
-            </Property>
-            <Property name="font" type="java.awt.Font">
-              <Font name="SansSerif" size="20" style="1"/>
-            </Property>
-          </Properties>
         </Component>
       </SubComponents>
     </Container>
 
-    <!-- ===== SIDEBAR (WEST) ===== -->
+    <!-- SIDEBAR BLEU FONCE -->
     <Container class="javax.swing.JPanel" name="panelSidebar">
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"
@@ -73,47 +70,38 @@
       </Properties>
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
       <SubComponents>
+
         <Component class="javax.swing.JButton" name="btnClients">
-          <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"
-                        value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-              <GridBagConstraints gridX="0" gridY="0" gridWidth="1" gridHeight="1"
-                fill="2" ipadX="0" ipadY="0"
-                insetsTop="10" insetsLeft="10" insetsBottom="5" insetsRight="10"
-                anchor="18" weightX="1.0" weightY="0.0"/>
-            </Constraint>
-          </Constraints>
           <Properties>
             <Property name="text" type="java.lang.String" value="Clients"/>
             <Property name="background" type="java.awt.Color">
-              <Color red="59" green="130" blue="246" type="1"/>
+              <Color red="29" green="78" blue="216" type="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color">
               <Color red="255" green="255" blue="255" type="1"/>
             </Property>
-            <Property name="font" type="java.awt.Font">
-              <Font name="SansSerif" size="13" style="1"/>
-            </Property>
-            <Property name="focusPainted" type="boolean" value="false"/>
+            <Property name="font" type="java.awt.Font"><Font name="SansSerif" size="13" style="1"/></Property>
             <Property name="borderPainted" type="boolean" value="false"/>
-            <Property name="cursor" type="java.awt.Cursor">
-              <Cursor type="12"/>
-            </Property>
+            <Property name="focusPainted" type="boolean" value="false"/>
+            <Property name="contentAreaFilled" type="boolean" value="false"/>
+            <Property name="opaque" type="boolean" value="true"/>
+            <Property name="cursor" type="java.awt.Cursor"><Cursor type="12"/></Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnClientsActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener"
+                          parameters="java.awt.event.ActionEvent" handler="btnClientsActionPerformed"/>
           </Events>
-        </Component>
-        <Component class="javax.swing.JButton" name="btnChambres">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"
                         value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-              <GridBagConstraints gridX="0" gridY="1" gridWidth="1" gridHeight="1"
-                fill="2" ipadX="0" ipadY="0"
-                insetsTop="5" insetsLeft="10" insetsBottom="5" insetsRight="10"
+              <GridBagConstraints gridX="0" gridY="0" gridWidth="1" gridHeight="1" fill="2"
+                ipadX="0" ipadY="0" insetsTop="10" insetsLeft="10" insetsBottom="5" insetsRight="10"
                 anchor="18" weightX="1.0" weightY="0.0"/>
             </Constraint>
           </Constraints>
+        </Component>
+
+        <Component class="javax.swing.JButton" name="btnChambres">
           <Properties>
             <Property name="text" type="java.lang.String" value="Chambres"/>
             <Property name="background" type="java.awt.Color">
@@ -122,60 +110,58 @@
             <Property name="foreground" type="java.awt.Color">
               <Color red="255" green="255" blue="255" type="1"/>
             </Property>
-            <Property name="font" type="java.awt.Font">
-              <Font name="SansSerif" size="13" style="1"/>
-            </Property>
-            <Property name="focusPainted" type="boolean" value="false"/>
+            <Property name="font" type="java.awt.Font"><Font name="SansSerif" size="13" style="1"/></Property>
             <Property name="borderPainted" type="boolean" value="false"/>
-            <Property name="cursor" type="java.awt.Cursor">
-              <Cursor type="12"/>
-            </Property>
+            <Property name="focusPainted" type="boolean" value="false"/>
+            <Property name="contentAreaFilled" type="boolean" value="false"/>
+            <Property name="opaque" type="boolean" value="true"/>
+            <Property name="cursor" type="java.awt.Cursor"><Cursor type="12"/></Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnChambresActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener"
+                          parameters="java.awt.event.ActionEvent" handler="btnChambresActionPerformed"/>
           </Events>
-        </Component>
-        <Component class="javax.swing.JButton" name="btnSejours">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"
                         value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-              <GridBagConstraints gridX="0" gridY="2" gridWidth="1" gridHeight="1"
-                fill="2" ipadX="0" ipadY="0"
-                insetsTop="5" insetsLeft="10" insetsBottom="5" insetsRight="10"
+              <GridBagConstraints gridX="0" gridY="1" gridWidth="1" gridHeight="1" fill="2"
+                ipadX="0" ipadY="0" insetsTop="5" insetsLeft="10" insetsBottom="5" insetsRight="10"
                 anchor="18" weightX="1.0" weightY="0.0"/>
             </Constraint>
           </Constraints>
+        </Component>
+
+        <Component class="javax.swing.JButton" name="btnSejours">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Séjours"/>
+            <Property name="text" type="java.lang.String" value="S&#xe9;jours"/>
             <Property name="background" type="java.awt.Color">
               <Color red="29" green="78" blue="216" type="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color">
               <Color red="255" green="255" blue="255" type="1"/>
             </Property>
-            <Property name="font" type="java.awt.Font">
-              <Font name="SansSerif" size="13" style="1"/>
-            </Property>
-            <Property name="focusPainted" type="boolean" value="false"/>
+            <Property name="font" type="java.awt.Font"><Font name="SansSerif" size="13" style="1"/></Property>
             <Property name="borderPainted" type="boolean" value="false"/>
-            <Property name="cursor" type="java.awt.Cursor">
-              <Cursor type="12"/>
-            </Property>
+            <Property name="focusPainted" type="boolean" value="false"/>
+            <Property name="contentAreaFilled" type="boolean" value="false"/>
+            <Property name="opaque" type="boolean" value="true"/>
+            <Property name="cursor" type="java.awt.Cursor"><Cursor type="12"/></Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSejoursActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener"
+                          parameters="java.awt.event.ActionEvent" handler="btnSejoursActionPerformed"/>
           </Events>
-        </Component>
-        <Component class="javax.swing.JButton" name="btnServices">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"
                         value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-              <GridBagConstraints gridX="0" gridY="3" gridWidth="1" gridHeight="1"
-                fill="2" ipadX="0" ipadY="0"
-                insetsTop="5" insetsLeft="10" insetsBottom="5" insetsRight="10"
+              <GridBagConstraints gridX="0" gridY="2" gridWidth="1" gridHeight="1" fill="2"
+                ipadX="0" ipadY="0" insetsTop="5" insetsLeft="10" insetsBottom="5" insetsRight="10"
                 anchor="18" weightX="1.0" weightY="0.0"/>
             </Constraint>
           </Constraints>
+        </Component>
+
+        <Component class="javax.swing.JButton" name="btnServices">
           <Properties>
             <Property name="text" type="java.lang.String" value="Services"/>
             <Property name="background" type="java.awt.Color">
@@ -184,38 +170,42 @@
             <Property name="foreground" type="java.awt.Color">
               <Color red="255" green="255" blue="255" type="1"/>
             </Property>
-            <Property name="font" type="java.awt.Font">
-              <Font name="SansSerif" size="13" style="1"/>
-            </Property>
-            <Property name="focusPainted" type="boolean" value="false"/>
+            <Property name="font" type="java.awt.Font"><Font name="SansSerif" size="13" style="1"/></Property>
             <Property name="borderPainted" type="boolean" value="false"/>
-            <Property name="cursor" type="java.awt.Cursor">
-              <Cursor type="12"/>
-            </Property>
+            <Property name="focusPainted" type="boolean" value="false"/>
+            <Property name="contentAreaFilled" type="boolean" value="false"/>
+            <Property name="opaque" type="boolean" value="true"/>
+            <Property name="cursor" type="java.awt.Cursor"><Cursor type="12"/></Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnServicesActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener"
+                          parameters="java.awt.event.ActionEvent" handler="btnServicesActionPerformed"/>
           </Events>
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"
+                        value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
+              <GridBagConstraints gridX="0" gridY="3" gridWidth="1" gridHeight="1" fill="2"
+                ipadX="0" ipadY="0" insetsTop="5" insetsLeft="10" insetsBottom="5" insetsRight="10"
+                anchor="18" weightX="1.0" weightY="0.0"/>
+            </Constraint>
+          </Constraints>
         </Component>
-        <!-- Spacer pour pousser les boutons vers le haut -->
+
         <Component class="javax.swing.JLabel" name="labelSpacer">
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"
                         value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-              <GridBagConstraints gridX="0" gridY="4" gridWidth="1" gridHeight="1"
-                fill="2" ipadX="0" ipadY="0"
-                insetsTop="0" insetsLeft="0" insetsBottom="0" insetsRight="0"
+              <GridBagConstraints gridX="0" gridY="4" gridWidth="1" gridHeight="1" fill="2"
+                ipadX="0" ipadY="0" insetsTop="0" insetsLeft="0" insetsBottom="0" insetsRight="0"
                 anchor="18" weightX="1.0" weightY="1.0"/>
             </Constraint>
           </Constraints>
-          <Properties>
-            <Property name="text" type="java.lang.String" value=""/>
-          </Properties>
         </Component>
+
       </SubComponents>
     </Container>
 
-    <!-- ===== ZONE CONTENU (CENTER) ===== -->
+    <!-- ZONE DE CONTENU CARDLAYOUT -->
     <Container class="javax.swing.JPanel" name="panelContenu">
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"
@@ -223,22 +213,7 @@
           <BorderConstraints direction="Center"/>
         </Constraint>
       </Constraints>
-      <Properties>
-        <Property name="background" type="java.awt.Color">
-          <Color red="241" green="245" blue="249" type="1"/>
-        </Property>
-      </Properties>
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignCardLayout"/>
-      <SubComponents>
-        <Container class="com.mycompany.gestionsejour.gui.ClientsGUI" name="panelClients">
-        </Container>
-        <Container class="com.mycompany.gestionsejour.gui.ChambresGUI" name="panelChambres">
-        </Container>
-        <Container class="com.mycompany.gestionsejour.gui.SejoursGUI" name="panelSejours">
-        </Container>
-        <Container class="com.mycompany.gestionsejour.gui.ServicesGUI" name="panelServices">
-        </Container>
-      </SubComponents>
     </Container>
 
   </SubComponents>
