--- a/src/main/java/com/mycompany/gestionsejour/gui/SejoursGUI.form
+++ b/src/main/java/com/mycompany/gestionsejour/gui/SejoursGUI.form
@@ -245,6 +245,8 @@
                 </Property>
                 <Property name="font" type="java.awt.Font"><Font name="SansSerif" size="13" style="1"/></Property>
                 <Property name="focusPainted" type="boolean" value="false"/>
+                <Property name="contentAreaFilled" type="boolean" value="false"/>
+                <Property name="opaque" type="boolean" value="true"/>
                 <Property name="cursor" type="java.awt.Cursor"><Cursor type="12"/></Property>
               </Properties>
               <Events>
@@ -403,6 +405,8 @@
                 </Property>
                 <Property name="font" type="java.awt.Font"><Font name="SansSerif" size="13" style="1"/></Property>
                 <Property name="focusPainted" type="boolean" value="false"/>
+                <Property name="contentAreaFilled" type="boolean" value="false"/>
+                <Property name="opaque" type="boolean" value="true"/>
                 <Property name="cursor" type="java.awt.Cursor"><Cursor type="12"/></Property>
               </Properties>
               <Events>
@@ -443,6 +447,8 @@
             </Property>
             <Property name="font" type="java.awt.Font"><Font name="SansSerif" size="12" style="0"/></Property>
             <Property name="focusPainted" type="boolean" value="false"/>
+            <Property name="contentAreaFilled" type="boolean" value="false"/>
+            <Property name="opaque" type="boolean" value="true"/>
             <Property name="cursor" type="java.awt.Cursor"><Cursor type="12"/></Property>
           </Properties>
           <Events>
