--- a/src/main/java/com/mycompany/gestionsejour/gui/ServicesGUI.form
+++ b/src/main/java/com/mycompany/gestionsejour/gui/ServicesGUI.form
@@ -11,126 +11,198 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,44,0,0,1,-112"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
+
   <SubComponents>
+
+    <!-- FORMULAIRE AJOUT SERVICE EN HAUT -->
     <Container class="javax.swing.JPanel" name="panelFormService">
+      <Constraints>
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"
+                    value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
+          <BorderConstraints direction="North"/>
+        </Constraint>
+      </Constraints>
       <Properties>
-        <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+        <Property name="background" type="java.awt.Color">
+          <Color red="241" green="245" blue="249" type="1"/>
+        </Property>
+        <Property name="border" type="javax.swing.border.Border"
+                  editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
             <TitledBorder title="Ajouter un service"/>
           </Border>
         </Property>
+        <Property name="preferredSize" type="java.awt.Dimension">
+          <Dimension value="[0, 170]"/>
+        </Property>
       </Properties>
-      <Constraints>
-        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
-          <BorderConstraints direction="North"/>
-        </Constraint>
-      </Constraints>
-
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
       <SubComponents>
+
         <Component class="javax.swing.JLabel" name="labelNomService">
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"
+                        value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
+              <GridBagConstraints gridX="0" gridY="0" fill="0"
+                insetsTop="12" insetsLeft="15" insetsBottom="5" insetsRight="5"
+                anchor="17" weightX="0.0" weightY="0.0"/>
+            </Constraint>
+          </Constraints>
           <Properties>
             <Property name="text" type="java.lang.String" value="Nom du service :"/>
+            <Property name="font" type="java.awt.Font"><Font name="SansSerif" size="12" style="1"/></Property>
           </Properties>
-          <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-              <GridBagConstraints gridX="0" gridY="0" gridWidth="1" gridHeight="1" fill="0" ipadX="0" ipadY="0" insetsTop="12" insetsLeft="15" insetsBottom="5" insetsRight="5" anchor="17" weightX="0.0" weightY="0.0"/>
-            </Constraint>
-          </Constraints>
         </Component>
+
         <Component class="javax.swing.JTextField" name="fieldNomService">
           <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-              <GridBagConstraints gridX="1" gridY="0" gridWidth="1" gridHeight="1" fill="2" ipadX="0" ipadY="0" insetsTop="12" insetsLeft="5" insetsBottom="5" insetsRight="15" anchor="17" weightX="1.0" weightY="0.0"/>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"
+                        value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
+              <GridBagConstraints gridX="1" gridY="0" fill="2"
+                insetsTop="12" insetsLeft="5" insetsBottom="5" insetsRight="15"
+                anchor="17" weightX="1.0" weightY="0.0"/>
             </Constraint>
           </Constraints>
         </Component>
+
         <Component class="javax.swing.JLabel" name="labelCategorieService">
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"
+                        value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
+              <GridBagConstraints gridX="2" gridY="0" fill="0"
+                insetsTop="12" insetsLeft="15" insetsBottom="5" insetsRight="5"
+                anchor="17" weightX="0.0" weightY="0.0"/>
+            </Constraint>
+          </Constraints>
           <Properties>
             <Property name="text" type="java.lang.String" value="Cat&#xe9;gorie :"/>
+            <Property name="font" type="java.awt.Font"><Font name="SansSerif" size="12" style="1"/></Property>
           </Properties>
-          <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-              <GridBagConstraints gridX="2" gridY="0" gridWidth="1" gridHeight="1" fill="0" ipadX="0" ipadY="0" insetsTop="12" insetsLeft="15" insetsBottom="5" insetsRight="5" anchor="17" weightX="0.0" weightY="0.0"/>
-            </Constraint>
-          </Constraints>
         </Component>
+
         <Component class="javax.swing.JTextField" name="fieldCategorieService">
           <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-              <GridBagConstraints gridX="3" gridY="0" gridWidth="1" gridHeight="1" fill="2" ipadX="0" ipadY="0" insetsTop="12" insetsLeft="5" insetsBottom="5" insetsRight="15" anchor="17" weightX="1.0" weightY="0.0"/>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"
+                        value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
+              <GridBagConstraints gridX="3" gridY="0" fill="2"
+                insetsTop="12" insetsLeft="5" insetsBottom="5" insetsRight="15"
+                anchor="17" weightX="1.0" weightY="0.0"/>
             </Constraint>
           </Constraints>
         </Component>
+
         <Component class="javax.swing.JLabel" name="labelPrixUnitaire">
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"
+                        value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
+              <GridBagConstraints gridX="0" gridY="1" fill="0"
+                insetsTop="5" insetsLeft="15" insetsBottom="5" insetsRight="5"
+                anchor="17" weightX="0.0" weightY="0.0"/>
+            </Constraint>
+          </Constraints>
           <Properties>
             <Property name="text" type="java.lang.String" value="Prix unitaire (&#x20ac;) :"/>
+            <Property name="font" type="java.awt.Font"><Font name="SansSerif" size="12" style="1"/></Property>
           </Properties>
-          <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-              <GridBagConstraints gridX="0" gridY="1" gridWidth="1" gridHeight="1" fill="0" ipadX="0" ipadY="0" insetsTop="5" insetsLeft="15" insetsBottom="5" insetsRight="5" anchor="17" weightX="0.0" weightY="0.0"/>
-            </Constraint>
-          </Constraints>
         </Component>
+
         <Component class="javax.swing.JTextField" name="fieldPrixUnitaire">
           <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-              <GridBagConstraints gridX="1" gridY="1" gridWidth="1" gridHeight="1" fill="2" ipadX="0" ipadY="0" insetsTop="5" insetsLeft="5" insetsBottom="5" insetsRight="15" anchor="17" weightX="1.0" weightY="0.0"/>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"
+                        value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
+              <GridBagConstraints gridX="1" gridY="1" fill="2"
+                insetsTop="5" insetsLeft="5" insetsBottom="5" insetsRight="15"
+                anchor="17" weightX="1.0" weightY="0.0"/>
             </Constraint>
           </Constraints>
         </Component>
+
         <Component class="javax.swing.JButton" name="btnAjouterService">
+          <Constraints>
+            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"
+                        value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
+              <GridBagConstraints gridX="0" gridY="2" gridWidth="4" fill="0"
+                insetsTop="12" insetsLeft="15" insetsBottom="12" insetsRight="15"
+                anchor="10" weightX="0.0" weightY="0.0"/>
+            </Constraint>
+          </Constraints>
           <Properties>
             <Property name="text" type="java.lang.String" value="Ajouter le service"/>
+            <Property name="background" type="java.awt.Color">
+              <Color red="37" green="99" blue="235" type="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color">
+              <Color red="255" green="255" blue="255" type="1"/>
+            </Property>
+            <Property name="font" type="java.awt.Font"><Font name="SansSerif" size="13" style="1"/></Property>
             <Property name="focusPainted" type="boolean" value="false"/>
+            <Property name="contentAreaFilled" type="boolean" value="false"/>
+            <Property name="opaque" type="boolean" value="true"/>
+            <Property name="cursor" type="java.awt.Cursor"><Cursor type="12"/></Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAjouterServiceActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener"
+                          parameters="java.awt.event.ActionEvent" handler="btnAjouterServiceActionPerformed"/>
           </Events>
-          <Constraints>
-            <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout" value="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout$GridBagConstraintsDescription">
-              <GridBagConstraints gridX="0" gridY="2" gridWidth="4" gridHeight="1" fill="0" ipadX="0" ipadY="0" insetsTop="12" insetsLeft="15" insetsBottom="12" insetsRight="15" anchor="10" weightX="0.0" weightY="0.0"/>
-            </Constraint>
-          </Constraints>
         </Component>
+
       </SubComponents>
     </Container>
+
+    <!-- BARRE BAS : RAFRAICHIR -->
     <Container class="javax.swing.JPanel" name="panelSudService">
       <Constraints>
-        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"
+                    value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
           <BorderConstraints direction="South"/>
         </Constraint>
       </Constraints>
-
+      <Properties>
+        <Property name="background" type="java.awt.Color">
+          <Color red="241" green="245" blue="249" type="1"/>
+        </Property>
+      </Properties>
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
       <SubComponents>
         <Component class="javax.swing.JButton" name="btnRafraichirServices">
           <Properties>
             <Property name="text" type="java.lang.String" value="Rafra&#xee;chir la liste"/>
+            <Property name="background" type="java.awt.Color">
+              <Color red="30" green="58" blue="138" type="1"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color">
+              <Color red="255" green="255" blue="255" type="1"/>
+            </Property>
+            <Property name="font" type="java.awt.Font"><Font name="SansSerif" size="12" style="0"/></Property>
             <Property name="focusPainted" type="boolean" value="false"/>
+            <Property name="contentAreaFilled" type="boolean" value="false"/>
+            <Property name="opaque" type="boolean" value="true"/>
+            <Property name="cursor" type="java.awt.Cursor"><Cursor type="12"/></Property>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRafraichirServicesActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener"
+                          parameters="java.awt.event.ActionEvent" handler="btnRafraichirServicesActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
     </Container>
+
+    <!-- TABLEAU DES SERVICES -->
     <Container class="javax.swing.JScrollPane" name="scrollServices">
       <Constraints>
-        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"
+                    value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
           <BorderConstraints direction="Center"/>
         </Constraint>
       </Constraints>
-
-      <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
         <Component class="javax.swing.JTable" name="tableServices">
           <Properties>
-            <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
+            <Property name="model" type="javax.swing.table.TableModel"
+                      editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="4" rowCount="0">
                 <Column editable="false" title="ID" type="java.lang.Object"/>
                 <Column editable="false" title="Nom" type="java.lang.Object"/>
@@ -140,9 +212,19 @@
             </Property>
             <Property name="autoResizeMode" type="int" value="4"/>
             <Property name="rowHeight" type="int" value="28"/>
+            <Property name="gridColor" type="java.awt.Color">
+              <Color red="191" green="219" blue="254" type="1"/>
+            </Property>
+            <Property name="selectionBackground" type="java.awt.Color">
+              <Color red="59" green="130" blue="246" type="1"/>
+            </Property>
+            <Property name="selectionForeground" type="java.awt.Color">
+              <Color red="255" green="255" blue="255" type="1"/>
+            </Property>
           </Properties>
         </Component>
       </SubComponents>
     </Container>
+
   </SubComponents>
 </Form>
